unpackaged/main/default/objects/Resource_Center_Setting__mdt/Resource_Center_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Resource Center Setting</label>
    <pluralLabel>Resource Center Settings</pluralLabel>
</CustomObject>