unpackaged/main/default/objects/Resource_Center_Setting__mdt/fields/Arc_Site_Url_Path_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Arc_Site_Url_Path_Prefix__c</fullName>
    <description>URL path prefix of the ARC LWR Experience site (the advisor portal whose sidebar links to this Help Center). ResourceCenterService.getArcBridge resolves the site&#39;s own SecureUrl from it for the Help Center&#39;s &quot;Back to ARC&quot; link (c:helpReturnLink). Blank falls back to &quot;ARC&quot;.</description>
    <label>ARC Site URL Path Prefix</label>
    <length>80</length>
    <type>Text</type>
</CustomField>