unpackaged/main/default/objects/Resource_Center_Setting__mdt/fields/File_Delivery_Mode__c.field-meta.xml
<CustomField>
    <fullName>File_Delivery_Mode__c</fullName>
    <label>File Delivery Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shepherd</fullName>
                <default>true</default>
                <label>Shepherd</label>
            </value>
            <value>
                <fullName>ContentDistribution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>