unpackaged/main/default/objects/Resource_Center_Setting__mdt/fields/Max_Category_Depth__c.field-meta.xml
<CustomField>
    <fullName>Max_Category_Depth__c</fullName>
    <description>Deepest level allowed in the Resource Center category tree and the Help Center topic tree (1 = top level). Blank or zero falls back to 5. Help topics are additionally capped by the platform&#39;s Data Category limit (5). Read through CategoryTreeService.maxDepth; the admin console reads it from the tree payload and never hard-codes it.</description>
    <label>Max Category Depth</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>