unpackaged/main/default/objects/Resource_Center_Setting__mdt/fields/Site_Url_Path_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Site_Url_Path_Prefix__c</fullName>
    <description>URL path prefix of the LWR Experience site hosting the Resources page (the c:resourceCenter page used for shareable resource links). Blank falls back to &quot;help&quot;.</description>
    <label>Site URL Path Prefix</label>
    <length>80</length>
    <type>Text</type>
</CustomField>