unpackaged/main/default/objects/Resource_Center_Setting__mdt/fields/Support_Email__c.field-meta.xml
<CustomField>
    <fullName>Support_Email__c</fullName>
    <description>Support mailbox for the &quot;Need more help?&quot; band and Get Help case terminal across the Help Center and Resource Center. Blank hides the contact card.</description>
    <label>Support Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>