unpackaged/main/default/objects/Resource_Center_Setting__mdt/fields/Support_Request_URL__c.field-meta.xml
<CustomField>
    <fullName>Support_Request_URL__c</fullName>
    <description>Target for the &quot;Submit a request&quot; card (URL or mailto:). Blank hides the card — set this once a real request flow exists; no deploy needed.</description>
    <label>Support Request URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>