unpackaged/main/default/objects/Resource_Center_Setting__mdt/fields/Unified_Search_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Unified_Search_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Rollout gate for the unified cross-app search on the landing page. Unchecked hides the landing&#39;s search bars (the topic directories and featured strip keep working); the per-app searches inside the Help Center and Resource Center are unaffected. Read through NexSKnowledgeController.getSupportSettings.</description>
    <label>Unified Search Enabled</label>
    <type>Checkbox</type>
</CustomField>