unpackaged/main/default/objects/Resource_Center_Setting__mdt/fields/Webinar_Agenda_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Agenda_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows the webinar agenda panel on the unified landing page (/help/). Blank or unchecked hides the panel entirely and the landing keeps its single-column layout; webinars stay reachable through search, categories, and their detail pages. Read through ResourceCenterService.getWebinars.</description>
    <label>Webinar Agenda Enabled</label>
    <type>Checkbox</type>
</CustomField>