unpackaged/main/default/objects/Resource_Center_Setting__mdt/fields/Webinar_Agenda_Limit__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Agenda_Limit__c</fullName>
    <description>Maximum rows in each agenda section (Upcoming and Recent) on the landing page. Blank or zero falls back to 5. Read through ResourceCenterService.getWebinars.</description>
    <label>Webinar Agenda Limit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>